basic/ingress-green-yello.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: color
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          serviceName: green-svc
          servicePort: 80
        path: /green
      - backend:
          serviceName: yello-svc
          servicePort: 80
        path: /yellow
